--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/qiannvyouhun/BaiDuZhuCe.git"
+  },
+  "author": "dxq",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/qiannvyouhun/BaiDuZhuCe/issues"
+  },
+  "homepage": "https://github.com/qiannvyouhun/BaiDuZhuCe#readme",
+
   "dependencies": {},
   "devDependencies": {
     "grunt": "^1.1.0",
