--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "test02",
+  "name": "baiduzhuce",
   "version": "1.0.0",
-  "description": "",
+  "description": "SPA任务二",
   "main": "index.js",
+  "dependencies": {
+    "grunt": "^1.1.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-uglify": "^4.0.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0"
   },
@@ -10,18 +17,10 @@
     "type": "git",
     "url": "git+https://github.com/qiannvyouhun/BaiDuZhuCe.git"
   },
-  "author": "dxq",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/qiannvyouhun/BaiDuZhuCe/issues"
   },
-  "homepage": "https://github.com/qiannvyouhun/BaiDuZhuCe#readme",
-
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "^1.1.0",
-    "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-htmlmin": "^3.1.0",
-    "grunt-contrib-uglify": "^4.0.1"
-  }
+  "homepage": "https://github.com/qiannvyouhun/BaiDuZhuCe#readme"
 }
